[gd_scene load_steps=7 format=3 uid="uid://b2dmsrk6j12y4"]

[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/solana_service.gd" id="1_hwc3u"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/TransactionProcessor/transaction_processor.gd" id="2_v3adq"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/wallet_service.gd" id="5_f327g"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/nft_manager.gd" id="6_b1bp1"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Utility/file_loader.gd" id="7_4sv1b"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/candy_machine_manager.gd" id="9_pob61"]

[node name="SolanaService" type="Node"]
script = ExtResource("1_hwc3u")
devnet_rpc = "https://api.devnet.solana.com"

[node name="TransactionProcessor" type="Node" parent="."]
script = ExtResource("2_v3adq")

[node name="WalletService" type="Node" parent="."]
script = ExtResource("5_f327g")
use_generated = true

[node name="WalletAdapter" type="WalletAdapter" parent="WalletService"]

[node name="NFTManager" type="Node" parent="."]
script = ExtResource("6_b1bp1")

[node name="FileLoader" type="Node" parent="."]
script = ExtResource("7_4sv1b")

[node name="CandyMachineManager" type="Node" parent="."]
script = ExtResource("9_pob61")
